tests/macros/plugin/default.stderr
error: option `default` does not exist for kind `plugin`
 --> $DIR/default.rs:2:44
  |
2 |     let q = requestty::questions![Plugin { default: todo!() }];
  |                                            ^^^^^^^
