tests/macros/plugin/default.rs
fn main() {
    let q = requestty::questions![Plugin { default: todo!() }];
}
